# projetIA

./: .gitignore  CMakeLists.txt  README.md  best_trained_single_pendulum_policy.pth  commandes_ros-gz.md  commandes_ros-gz.txt  controller.yaml  default_world.sdf  double_pendulum.sdf  double_pendulum_rail.sdf  package.xml  ppo_actor.pth  ppo_critic.pth  readme.md  requirements.txt  trained_policy.pth  trained_policy_1.pth  trained_single_pendulum_policy.pth
config/: bridge_config.yaml
launch/: pendulum.launch.py
models/: double_pendulum_rail.sdf
nodes/: force_publisher.py
saved policies/: best_trained_single_pendulum_policy.pth
saved_policies/: best_policy_net_DQN.pth  best_target_net_DQN.pth  policy_net_DQN.pth  policy_net_DQN_100.pth  policy_net_DQN_1090.pth  policy_net_DQN_110.pth  policy_net_DQN_1100.pth  policy_net_DQN_1170.pth  policy_net_DQN_120.pth  policy_net_DQN_1240.pth  policy_net_DQN_1250.pth  policy_net_DQN_140.pth  (+136 more)
src/projetIA/: package.xml  setup.cfg  setup.py
src/projetIA/config/: bridge_config.yaml
src/projetIA/launch/: pendulum.launch.py  simple_pendulum.launch.py  simple_pendulum_up.launch.py  test_pendulum.launch.py  train_pendulum.launch.py
src/projetIA/models/: default_world.sdf  double_pendulum_rail.sdf  simple_pendulum_rail.sdf  simple_pendulum_up_rail.sdf
src/projetIA/projetIA/: eval_all_policies.py  eval_policy.py  main.py  network.py  pendulum_env.py  position_publisher.py  ppo.py  reinforcement_q_learning.py  speed_publisher.py  state_subscriber.py  train_pendulum.py  train_pendulum_DQN.py  train_pendulum_reinforce.py  world_control.py
src/projetIA/scripts/: train.py
(+532 files in other folders)
