<package format="3">
  <name>projetIA</name>
  <version>0.0.1</version>
  <description>Using Gazebo Sim simulation with ROS to balance a double pendulum</description>

  <license>Apache License 2.0</license>

  <author>Aymeric Buriez</author>
  <maintainer email="aymeric.buriez@hotmail.fr">Aymeric Buriez</maintainer>
  <maintainer email="julia.souviron@gmail.com">Julia Souviron</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_sim_vendor</depend>

  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <!-- See https://github.com/gazebosim/ros_gz/issues/40 -->
  <!--exec_depend>ros_gz_point_cloud</exec_depend-->
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>